# DefaultLauncher

./: .gitignore  AndroidManifest-common.xml  AndroidManifest.xml  CLAUDE.md  CONTRIBUTING.md  README.md  build.gradle  gradlew  gradlew.bat  proguard.flags  rotate-keystore.ps1  settings.gradle  settings.gradle.kts
.github/: GlyphToPath.java  release-notes-template.md
.run/: DefaultLauncher.run.xml
app/: build.gradle.kts
docs/: Home.md  README.md  _Sidebar.md  folders.md  grid-reflow.md  grid-system.md  hotseat-architecture.md  icon-shapes-and-packs.md  per-app-icon-customization.md  search-system.md  settings.md  widget-stack.md
flagslib/: build.gradle
gradle/: libs.versions.toml
iconloaderlib/: build.gradle.kts
tests-e2e/: .gitignore  README.md  conftest.py  pyproject.toml  run.sh
tests-e2e/lib/: adb_setup.py  launcher.py  selectors.py  visuals.py
tests-e2e/regression/: test_clock_widget_prefs.py  test_deletion_safety.py  test_drawer_cold_start.py  test_drawer_decomposition.py  test_drawer_insets.py  test_drawer_state.py  test_folder_color_migration.py  test_folder_visual.py  test_header_coordinator.py  test_profile_coordinator.py  test_search_launch_and_return.py  test_search_lifecycle.py  test_search_progressive.py  test_workspace_padding_prefs.py
tests-e2e/smoke/: test_clock_widget_basics.py  test_drawer_basics.py  test_grid_basics.py  test_harness_sanity.py  test_search_basics.py  test_search_widget_basics.py  test_settings_basics.py  test_workspace_basics.py
tests-e2e/visuals/: test_clock_widget_paint.py  test_drawer_paint_baseline.py
(+580 files in other folders)
